# SerialHub

./: .gitignore  About.py  HtmlPopupTransientWindow.py  LICENSE  Main.py  README.md  encode-bitmaps.py  images.py  index.html  nodemcu-pyflasher.py  package-lock.json  package.json  requirements.txt  tailwind.config.js
src/: App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mqtt_cmd.rs  serial_cmd.rs
src/components/layout/: ActivityBar.tsx  BluetoothSidebar.tsx  CommandBar.tsx  Sidebar.tsx  SpySidebar.tsx  StatusBar.tsx  TerminalArea.tsx
src/components/mqtt/: MqttChart.tsx  TopicTree.tsx
src/components/pages/: DashboardPage.tsx  MqttPage.tsx  SettingsPage.tsx
src/components/ui/: LedIndicator.tsx
src/hooks/: useDataMonitor.ts  useLanguage.ts
src/i18n/: translations.ts
src/lib/: formatters.ts
src/stores/: macroStore.ts  mqttStore.ts  settingsStore.ts  uiStore.ts
src/styles/: global.css
