[package]
name = "serial-hub"
version = "1.0.0"
description = "A modern Serial Monitor alternative to RealTerm"
authors = ["WigoWigo"]
edition = "2021"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.5" # Para comunicação serial
tokio = { version = "1", features = ["full"] } # Para assincronicidade (Spy Mode)
tauri-plugin-dialog = "2"
tauri-plugin-bluetooth = "0.1.1"
tauri-plugin-shell = "2"
sysinfo = "0.30"
wmi = "0.13"
