[package]
name = "serial-hub"
version = "1.1.0"
description = "A modern, high-performance serial monitor"
authors = ["WigoWigo10"]
edition = "2021"
license = "MIT"
repository = "https://github.com/WigoWigo10/SerialHub"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.6.0"
chrono = "0.4.38"
sysinfo = "0.32.0"
wmi = "0.13"
log = "0.4.22"
env_logger = "0.11.5"
once_cell = "1.20.2"
parking_lot = "0.12.3"
rumqttc = { version = "0.24", features = ["use-rustls", "websocket"] }
uuid = { version = "1.10", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
